assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lobster&display=swap');

/* ---------------------------------- Code Credit to https://stackoverflow.com/questions/6805482/css3-transition-animation-on-load/12638711#12638711 */
@keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }

    100% {
        transform: translateX(0);
    }
}

/* ---------------------------------- End Credit */

/* ---------------------------------- General Stylings / Overriding Bootstrap Styles */
html {
    scroll-behavior: smooth;
}

body {
    background-color: #1d1d1b;
    line-height: normal;
}

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: #ffffff;
}

a:hover {
    color: #c11734;
    text-decoration: none;
}

ul {
    margin: 0;
    padding: 0;
    border: 0;
}

.hidden {
    display: none;
}

/* ---------------------------------- Header */
.header {
    background-color: #1d1d1b;
    height: 200px;
    width: 100%;
}

.logo {
    height: 200px;
    width: 200px;
    display: block;
    margin: 0 auto;
}

.instagram-icon {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    position: absolute;
    left: 30px;
    top: 30px;
    background-color: #ffffff;
}

.instagram-icon a {
    font-size: 35px;
    color: #1d1d1b;
    position: absolute;
    left: 10px;
    top: 5px;
}

.instagram-msg {
    font-family: Lobster, sans-serif;
    color: #ffffff;
    position: absolute;
    left: 90px;
    top: 45px;
}

/* ---------------------------------- Divider */
.divider {
    background-color: #c11734;
    width: 100%;
    height: 2px;
}

/* ----------------------------------  Hero Image */
.hero-image {
    background: url('../images/hero-img.jpg') no-repeat center center;
    background-size: cover;
    width: 100%;
    height: 550px;
    z-index: -1;
    display: flex;
    background-attachment: fixed;
}

/* ---------------------------------- Navigation Bar */
#navbar {
    font-family: Lobster, sans-serif;
    font-size: 25px;
    position: sticky;
    top: 0;
    background-color: rgba(0, 0, 0, .7);
    width: 100%;
    height: 80px;
    text-align: center;
    z-index: 1;
}

#navbar li {
    line-height: 75px;
    width: 16.6%;
    float: left;
    list-style-type: none;
}

#navbar a {
    margin: 0 auto;
    color: #FFFFFF;
    text-decoration: none;
}

#navbar a:hover {
    color: #c11734;
    text-decoration: none;
}

/* ---------------------------------- Code Credit to https://github.com/IanLunn/Hover */
/* ---------------------------------- Icon Fade */
.hvr-icon-fade {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}

.hvr-icon-fade .hvr-icon {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
    -webkit-transition-property: color;
    transition-property: color;
}

.hvr-icon-fade:hover .hvr-icon,
.hvr-icon-fade:focus .hvr-icon,
.hvr-icon-fade:active .hvr-icon {
    color: #c11734;
}

/* ---------------------------------- Icon Wobble Vertical */
@-webkit-keyframes hvr-icon-wobble-vertical {
    16.65% {
        -webkit-transform: translateY(6px);
        transform: translateY(6px);
    }

    33.3% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

    49.95% {
        -webkit-transform: translateY(4px);
        transform: translateY(4px);
    }

    66.6% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    83.25% {
        -webkit-transform: translateY(1px);
        transform: translateY(1px);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}

@keyframes hvr-icon-wobble-vertical {
    16.65% {
        -webkit-transform: translateY(6px);
        transform: translateY(6px);
    }

    33.3% {
        -webkit-transform: translateY(-5px);
        transform: translateY(-5px);
    }

    49.95% {
        -webkit-transform: translateY(4px);
        transform: translateY(4px);
    }

    66.6% {
        -webkit-transform: translateY(-2px);
        transform: translateY(-2px);
    }

    83.25% {
        -webkit-transform: translateY(1px);
        transform: translateY(1px);
    }

    100% {
        -webkit-transform: translateY(0);
        transform: translateY(0);
    }
}

.hvr-icon-wobble-vertical {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}

.hvr-icon-wobble-vertical .hvr-icon {
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
}

.hvr-icon-wobble-vertical:hover .hvr-icon,
.hvr-icon-wobble-vertical:focus .hvr-icon,
.hvr-icon-wobble-vertical:active .hvr-icon {
    -webkit-animation-name: hvr-icon-wobble-vertical;
    animation-name: hvr-icon-wobble-vertical;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-timing-function: ease-in-out;
    animation-timing-function: ease-in-out;
    -webkit-animation-iteration-count: 1;
    animation-iteration-count: 1;
}

/* ---------------------------------- Icon Rotate */
.hvr-icon-rotate {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}
/* ... */

